--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -1,2 +1,20 @@
-<h1>User::Posts#show</h1>
-<p>Find me in app/views/user/posts/show.html.erb</p>
+<!-- 投稿詳細画面 -->
+<h1>投稿詳細</h1>
+
+<div class="post-image">
+  <% if @post.images.attached? %>
+    <%= image_tag @post.images, size: '300*300' %>
+  <% end %>
+  <% if @post.movie.attached? %>
+    <%= image_tag @post.movie, size: '300*300' %>
+  <% end %>
+</div>
+<div class="post-content">
+  <%= @post.content %>
+  <%= @post.spot %>
+</div>
+<div class="post-destroy">
+  <% if @post.user == current_user %>
+    <%= link_to "destroy", post_path(@post.id), method: :delete, data: { confirm: "本当に削除しますか?" } %>
+  <% end %>
+</div>
