[Add]ユーザー情報編集機能追加

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
     <%= link_to "Noice" %>
   </li>
   <li>
-    <%= link_to "my profile" %>
+    <%= link_to "my profile", user_path(current_user.id) %>
   </li>
   <li>
     <%= link_to "Log out", destroy_user_session_path, method: :delete %>
