--- a/app/views/user/users/edit.html.erb
+++ b/app/views/user/users/edit.html.erb
@@ -1,2 +1,36 @@
-<h1>User::Users#edit</h1>
-<p>Find me in app/views/user/users/edit.html.erb</p>
+<!-- 会員情報編集画面 -->
+<h1>プロフィール編集</h1>
+
+<%= form_with model: @user, url: user_path do |f| %>
+  <table>
+    <tr>
+      <td><%= image_tag @user.get_profile_image(100, 100) %></td>
+      <td><%= f.file_field :profile_image %></td>
+    </tr>
+    <tr>
+      <th>名前</th>
+      <td><%= f.text_field :name %></td>
+    </tr>
+    <tr>
+      <th>バイク機種</th>
+      <td><%= f.text_field :bike_model %></td>
+    </tr>
+    <tr>
+      <th>居住地</th>
+      <td><%= f.text_field :residence %></td>
+    </tr>
+    <tr>
+      <th>自己紹介</th>
+      <td><%= f.text_area :introduction %></td>
+    </tr>
+    <tr>
+      <th>メールアドレス</th>
+      <td><%= f.text_field :email %></td>
+    </tr>
+  </table>
+
+  <div class="action">
+    <%= f.submit "変更する" %>
+  </div>
+<% end %>
+
