--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -10,7 +10,7 @@
       </tr>
       <tr>
         <th>動画</th>
-        <td><%= f.file_field :movie, accept: "movie/*" %></td>
+        <td><%= f.file_field :movie %></td>
       </tr>
       <tr>
         <th>投稿内容</th>
