--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -6,8 +6,29 @@
     <td><%= image_tag @user.get_profile_image(100, 100) %></td>
     <td><%= @user.name %></td>
     <td>
+      <% if @user != current_user %>
+        <% if current_user.following?(@user) %>
+          <%= link_to "フォローを外す", user_relationships_path(@user.id), method: :delete %>
+        <% else %>
+          <%= link_to "フォローする", user_relationships_path(@user.id), method: :post %>
+        <% end %>
+      <% end %>
+    </td>
+    <td>
       <% if @user == current_user %>
         <%= link_to "プロフィールを編集する", edit_user_path %>
+      <% end %>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <%= link_to user_followings_path(@user) do %>
+        フォロー数 <%= @user.followings.count %>
+      <% end %>
+    </td>
+    <td>
+      <%= link_to user_followers_path(@user) do %>
+        フォロワー数 <%= @user.followers.count %>
       <% end %>
     </td>
   </tr>
