--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -2,8 +2,9 @@
 <h1>投稿詳細</h1>
 
 <div class="post-content">
+  <%= l @post.created_at %>
   <%= link_to user_path(@post.user.id) do %>
-    <%= image_tag @post.user.get_profile_image(50, 50)%>
+    <%= image_tag @post.user.get_profile_image(50, 50) %>
     <%= @user.name %>
   <% end %>
   <% if @post.images.attached? %>
@@ -12,11 +13,11 @@
   <% if @post.movie.attached? %>
     <%= video_tag rails_blob_path(@post.movie), size: '300*300' %>
   <% end %>
-  <p><%= @post.content %></p>
+  <p><%= render_with_hashtags(@post.content) %></p>
   <p><%= @post.spot %></p>
 </div>
 <div class="post-action">
-  <strpmg>コメント数 </strong><%= @post.post_comments.count %>
+  <strpmg>コメント数: </strong><%= @post.post_comments.count %>
   <% if @post.favorited_by?(current_user) %>
     <%= link_to post_favorites_path(@post), method: :delete do %>
       <strong>♥ </strong><%= @post.favorites.count %>
