--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -17,6 +17,10 @@
         <td><%= f.text_area :content %></td>
       </tr>
       <tr>
+        <th>ハッシュタグ入力欄</th>
+        <td><%= f.text_area :hashbody %></td>
+      </tr>
+      <tr>
         <th>スポット</th>
         <td><%= f.text_field :spot %></td>
       </tr>
