--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,28 +1,58 @@
 <!-- ヘッダー部分テンプレ -->
-<% if user_signed_in? %> <!-- Loginヘッダー -->
-  <li>
-    <%= link_to "Home", posts_path %>
-  </li>
-  <li>
-    <%= link_to "New post", new_post_path %>
-  </li>
-  <li>
-    <%= link_to "Noice" %>
-  </li>
-  <li>
-    <%= link_to "my profile", user_path(current_user.id) %>
-  </li>
-  <li>
-    <%= link_to "Log out", destroy_user_session_path, method: :delete %>
-  </li>
-<% else %> <!-- Logoutヘッダー -->
-  <li>
-    <%= link_to "About", about_path %>
-  </li>
-  <li>
-    <%= link_to "New customer", new_user_registration_path %>
-  </li>
-  <li>
-    <%= link_to "Log in", new_user_session_path %>
-  </li>
-<% end %>
+<nav class="navbar navbar-expand-lg navbar-light">
+  <div class="container">
+    <a class="navbar-brand" href="/">
+      <span>
+        <i class="fas fa-motorcycle"></i> bikeen
+      </span>
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                  aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav ml-auto">
+        <% if user_signed_in? %> <!-- Loginヘッダー -->
+          <li class="nav-item">
+            <%= link_to posts_path, class: "nav-link text-dark" do %>
+              <i class="fas fa-house-chimney"></i> Home
+            <% end %>
+          </li>
+          <li class="nav-item">
+            <%= link_to new_post_path, class: "nav-link text-dark" do %>
+              <i class="fas fa-comment"></i> New post
+            <% end %>
+          </li>
+          <li class="nav-item">
+            <%= link_to class: "nav-link text-dark" do %>
+              <i class="fas fa-bell"></i> Noice
+            <% end %>
+          </li>
+          <li class="nav-item">
+            <%= link_to user_path(current_user.id), class: "nav-link text-dark" do %>
+              <i class="fas fa-face-hand-over-mouth"></i> My prolile
+            <% end %>
+          </li>
+          <li class="nav-item">
+            <%= link_to destroy_user_session_path, method: :delete, class: "nav-link text-dark" do %>
+              <i class="fas fa-right-from-bracket"></i> Log out
+            <% end %>
+          </li>
+        <% else %> <!-- Logoutヘッダー -->
+          <li class="nav-item">
+            <%= link_to new_user_registration_path, class: "nav-link text-dark" do %>
+              <i class="fas fa-user-plus"></i> Sign up
+            <% end %>
+          </li>
+          <li class="nav-item">
+            <%= link_to new_user_session_path, class: "nav-link text-dark" do %>
+              <i class="fas fa-sign-in-alt"></i> Log in
+            <% end %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
