--- a/app/views/user/posts/index.html.erb
+++ b/app/views/user/posts/index.html.erb
@@ -1,20 +1,26 @@
 <!-- 投稿一覧画面 -->
 <h1>投稿一覧</h1>
 
-<% @posts.each do |post| %>
-  <div class="post-list">
-    <%= link_to post_path(post.id) do %>
-      <% if post.images.attached? %>
-        <%= image_tag post.images[0], size: '100*100' %><br/>
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <% @posts.each do |post| %>
+        <div class="post-list">
+          <%= link_to post_path(post.id) do %>
+            <% if post.images.attached? %>
+              <%= image_tag post.images[0], size: '100*100' %><br/>
+            <% end %>
+            <% if post.movie.attached? %>
+              <%= video_tag rails_blob_path(post.movie), size: '100*100' %><br/>
+            <% end %>
+            <%= post.content %>
+            <%= post.spot %>
+            <p>
+              <strong>コメント数 </strong><%= post.post_comments.count %>
+            </p>
+          <% end %>
+        </div>
       <% end %>
-      <% if post.movie.attached? %>
-        <%= video_tag rails_blob_path(post.movie), size: '100*100' %><br/>
-      <% end %>
-      <%= post.content %>
-      <%= post.spot %>
-      <p>
-        <strong>コメント数 </strong><%= post.post_comments.count %>
-      </p>
-    <% end %>
+    </div>
   </div>
-<% end %>
+</div>
