--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -13,7 +13,8 @@
   <% if @post.movie.attached? %>
     <%= video_tag rails_blob_path(@post.movie), size: '300*300' %>
   <% end %>
-  <p><%= render_with_hashtags(@post.content) %></p>
+  <p><%= @post.content %></p>
+  <p><%= render_with_hashtags(@post.hashbody) %></p>
   <p><%= @post.spot %></p>
 </div>
 <div class="post-action">
