--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -1,29 +1,45 @@
-<h2>Sign up</h2>
+<!-- Signup画面 -->
+<div class="card-list-conteiner py-5 mb-5">
+  <div class="card w-50 mx-auto mt-4 shadow-lg text-center">
+    <h2 class="mt-5 mb-3">Sign up</h2>
 
-<%= form_with model: @user, url: user_registration_path do |f| %>
-  <%= render "user/shared/error_messages", resource: resource %>
+    <%= form_with model: @user, url: user_registration_path do |f| %>
+      <%= render "user/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <div class="field col-6 mx-auto">
+        <%# f.label :name %><br />
+        <%= f.email_field :name, placeholder: "   Name", autofocus: true, autocomplete: "name", style: "width: 90%;" %>
+      </div>
+
+      <div class="field col-6 mx-auto">
+        <%# f.label :email %><br />
+        <%= f.email_field :email, placeholder: "    Email Address", autofocus: true, autocomplete: "email", style: "width: 90%;" %>
+      </div>
+
+      <div class="field col-6 mx-auto">
+        <%# f.label :password %>
+        <% if @minimum_password_length %>
+        <em><%# (@minimum_password_length characters minimum) %></em>
+        <% end %><br />
+        <%= f.password_field :password, placeholder: "    Password", autocomplete: "new-password", style: "width: 90%;" %>
+      </div>
+
+      <div class="field col-6 mx-auto">
+        <%# f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation, placeholder: "    Password(re-enter)", autocomplete: "new-password", style: "width: 90%;" %>
+      </div>
+
+      <div class="action col-3 mx-auto">
+        <%= f.submit "Sign up", class: "btn btn-outline-danger btn-sm btn-block" %>
+      </div>
+    <% end %>
+
+    <div class="signin-field">
+      <p>───────────────　Or　───────────────</p>
+      <p>
+        Already have on account?<br />
+        <%= render "user/shared/links" %>
+      </p>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "user/shared/links" %>
+</div>
