--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,9 +20,10 @@
   box-sizing: border-box;
 }
 
-/* 共通 */
+/* Signup/in画面 */
 a:hover {
   color: #0056b3;
+  text-decoration: none;
 }
 
 .field, .action {
@@ -41,7 +42,7 @@ a:hover {
 .icon {
   width: 35px;
   height: 35px;
-  border-radius: 50px;
+  border-radius: 50%;
   margin-right: 20px;
   margin-bottom: 15px;
 }
@@ -53,3 +54,50 @@ a:hover {
 .signup-link {
   margin-left: 10px;
 }
+
+/* プロフィール画面 */
+.profile-wrap {
+  margin: 0 auto;
+  justify-content: center;
+  padding: 100px 300px;
+}
+
+.profile-icon {
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+}
+
+.follower-link, .follow-link {
+  color: #000;
+}
+
+.my-post {
+  padding: 30px 0;
+  border-top: 1px solid #ddd;
+}
+
+.post-item {
+  padding: 0 60px;
+}
+
+.post-item img {
+  width: 200px;
+  height: 200px;
+}
+
+.post-wrap {
+  margin: 0 auto;
+  justify-content: center;
+  padding: 100px 200px;
+}
+
+.card {
+  margin: 0 50px;
+}
+
+card img {
+  height: 300px;
+}
+
+
