--- a/app/views/user/users/edit.html.erb
+++ b/app/views/user/users/edit.html.erb
@@ -1,36 +1,43 @@
 <!-- 会員情報編集画面 -->
-<h1>プロフィール編集</h1>
+<div class="card-list-conteiner py-5 mb-5">
+  <div class="card w-50 mx-auto mt-4 shadow-lg text-center">
+    <h3 class="mt-5 mb-3">プロフィール編集</h3>
 
-<%= form_with model: @user, url: user_path do |f| %>
-  <table>
-    <tr>
-      <td><%= image_tag @user.get_profile_image(100, 100) %></td>
-      <td><%= f.file_field :profile_image %></td>
-    </tr>
-    <tr>
-      <th>名前</th>
-      <td><%= f.text_field :name %></td>
-    </tr>
-    <tr>
-      <th>バイク機種</th>
-      <td><%= f.text_field :bike_model %></td>
-    </tr>
-    <tr>
-      <th>居住地</th>
-      <td><%= f.text_field :residence %></td>
-    </tr>
-    <tr>
-      <th>自己紹介</th>
-      <td><%= f.text_area :introduction %></td>
-    </tr>
-    <tr>
-      <th>メールアドレス</th>
-      <td><%= f.text_field :email %></td>
-    </tr>
-  </table>
+    <%= form_with model: @user, url: user_path do |f| %>
+      <div class="field col-6 mx-auto">
+        <%= image_tag @user.get_profile_image(100, 100), class: "profile-icon mb-5" %><br />
+        <%= f.file_field :profile_image %>
+      </div>
 
-  <div class="action">
-    <%= f.submit "変更する" %>
+      <div class="field col-6 mx-auto">
+        <%= f.label :名前 %>
+        <%= f.text_field :name, style: "width: 90%;" %>
+      </div>
+
+      <div class="field col-6 mx-auto">
+        <%= f.label :バイク機種 %>
+        <%= f.text_field :bike_model, style: "width: 90%;" %>
+      </div>
+
+      <div class="field col-6 mx-auto">
+        <%= f.label :居住地 %>
+        <%= f.text_field :residence, style: "width: 90%;" %>
+      </div>
+
+      <div class="field col-6 mx-auto">
+        <%= f.label :自己紹介 %>
+        <%= f.text_area :introduction, style: "width: 90%;" %>
+      </div>
+
+      <div class="field col-6 mx-auto">
+        <%= f.label :メールアドレス %>
+        <%= f.text_field :email, style: "width: 90%;" %>
+      </div>
+
+      <div class="action col-3 mx-auto mt-4">
+        <%= f.submit "変更する", class: "btn btn-dark btn-sm btn-block mb-5" %>
+      </div>
+    <% end %>
   </div>
-<% end %>
+</div>
 
