[Update]レイアウト修正中

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <!-- フッター部分テンプレ -->
 <div class="container">
-  <div class="row">
+  <div class="row no-gutters">
     <div class="mx-auto">
       <p>
         <i class="fas fa-motorcycle"></i> © 2022 bikeen, Inc.
