--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     </header>
 
     <p id="notice">
-      <%= notice %>
+      <%# notice %>
     </p>
 
     <main class="mb-auto"> <!-- メイン画面 -->
