--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,22 +14,19 @@
  *= require_self
  */
 
+/* 共通 */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-/* Signup/in画面 */
 a:hover {
   color: #0056b3;
   text-decoration: none;
 }
 
-.field, .action {
-  margin-bottom: 15px;
-}
-
+/* Signup/in画面 */
 .signin-field {
   margin-bottom: 30px;
 }
@@ -68,8 +65,9 @@ a:hover {
   height: 120px;
 }
 
-.follower-link, .follow-link {
+.follower-link, .follow-link, .favorite-link {
   color: #000;
+  text-decoration: none;
 }
 
 .my-post {
@@ -96,7 +94,8 @@ a:hover {
   margin: 0 50px;
 }
 
-card img {
+.user.post.img {
+  width: 300px;
   height: 300px;
 }
 
