--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -1,38 +1,42 @@
 <!-- 新規投稿画面 -->
-<div class="card-list-conteiner py-5 mb-5">
-  <div class="card w-50 mx-auto mt-4 shadow-lg text-center">
-    <h3 class="mt-5 mb-3">新規投稿</h3>
+<div class="conteiner p-3">
+  <div class="row no-gutters">
+    <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto text-center shadow-lg rounded px-0 my-5">
+      <h3 class="py-5 mb-0">新規投稿</h3>
 
-    <%= form_with model: @post, url: posts_path do |f| %>
-      <div class="field col-6 mx-auto">
-        <%= image_tag @user.get_profile_image(100, 100), class: "profile-icon mb-5" %><br />
-        <%= f.label :画像 %><br />
-        <%= f.file_field :images, multiple: true %>
-      </div>
+      <div class="field-body p-4">
+        <%= form_with model: @post, url: posts_path do |f| %>
+          <div class="field mb-3">
+            <%= image_tag @user.get_profile_image(100, 100), class: "profile-icon mb-5" %><br />
+            <%= f.label :画像 %><br />
+            <%= f.file_field :images, multiple: true %>
+          </div>
 
-      <div class="field col-6 mx-auto">
-        <%= f.label :動画 %><br />
-        <%= f.file_field :movie %>
-      </div>
+          <%#div class="field mb-3">
+            <%# f.label :動画 %>
+            <%# f.file_field :movie %>
+          <%#/div%>
 
-      <div class="field col-6 mx-auto">
-        <%= f.label :投稿内容 %><br />
-        <%= f.text_area :content, style: "width: 90%;" %>
-      </div>
+          <div class="field mb-3">
+            <%= f.label :投稿内容 %><br />
+            <%= f.text_area :content, style: "width: 50%;" %>
+          </div>
 
-      <div class="field col-6 mx-auto">
-        <%= f.label :ハッシュタグ入力欄 %><br />
-        <%= f.text_area :hashbody, style: "width: 90%;" %>
-      </div>
+          <div class="field mb-3">
+            <%= f.label :ハッシュタグ入力欄 %><br />
+            <%= f.text_area :hashbody, style: "width: 50%;" %>
+          </div>
 
-      <div class="field col-6 mx-auto">
-        <%= f.label:スポット %><br />
-        <%= f.text_field :spot, style: "width: 90%;" %>
-      </div>
+          <div class="field mb-3">
+            <%= f.label:スポット %><br />
+            <%= f.text_field :spot, style: "width: 50%;" %>
+          </div>
 
-      <div class="action col-3 mx-auto mt-4">
-        <%= f.submit "投稿する", class: "btn btn-dark btn-sm btn-block mb-5" %>
+          <div class="field mb-3">
+            <%= f.submit "投稿する", class: "btn btn-dark btn-sm mt-4", style: "width: 42%;" %>
+          </div>
+        <% end %>
       </div>
-    <% end %>
+    </div>
   </div>
 </div>
