--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,9 @@
  *= require_self
  */
 
+ /* swiper読み込み */
+ @import 'swiper/swiper-bundle.min.css';
+
 /* 共通 */
 * {
   margin: 0;
@@ -94,9 +97,13 @@ a:hover {
   margin: 0 50px;
 }
 
-.user.post.img {
-  width: 300px;
-  height: 300px;
+/* 投稿詳細画面 */
+.user-post-img {
+  width: 580px;
+  height: 530px;
 }
 
+.comment-field {
+  margin-left: 20px;
+}
 
