--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,9 @@
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <!-- CSS反映 -->
-    <!-- Bootstrap反映 -->
+    <!-- CSS読み込み -->
+    <!-- Bootstrap読み込み -->
+    <!-- CDN読み込み-->
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -29,5 +30,6 @@
     <footer class="bg-dark text-white pt-5 pb-4"> <!-- フッター部分テンプレ -->
       <%= render 'layouts/footer' %>
     </footer>
+
   </body>
 </html>
